# LDtk-D11

./: .gitignore  CMakeLists.txt  CMakeSettings.json  EntityWrapper.cpp  EntityWrapper.h  Game.cpp  Game.h  LICENSE  Level Builder.vcxproj  Level Builder.vcxproj.filters  Main.cpp  Nate And Reids Isakei Adventure.sln  README.md  ScrollingBackground.h  Utilities.cpp  Utilities.h  castle.ldtk  packages.config  pch.h  resource.rc  utf8conv.h  utf8except.h
LDtkLoader/: DataTypes.cpp  Entity.cpp  Entity.hpp  EntityDef.cpp  EntityDef.hpp  Enum.cpp  Enum.hpp  FieldsContainer.cpp  FieldsContainer.hpp  LDtkLoader.vcxproj  LDtkLoader.vcxproj.filters  Layer.cpp  Layer.hpp  LayerDef.cpp  LayerDef.hpp  Level.cpp  Level.hpp  Tileset.cpp  Tileset.hpp  Utils.cpp  Utils.hpp  World.cpp  World.hpp
lib/cmake/LDtkLoader/: LDtkLoaderConfig.cmake  LDtkLoaderTargets-debug.cmake  LDtkLoaderTargets.cmake
